kubernetes/apps/pegasus/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  selector:
    matchLabels:
      app: oauth2-proxy
  replicas: 2
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: ghcr.io/oauth2-proxy/oauth2-proxy.de:v1.0.11
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            port: 8080
          initialDelaySeconds: 5
      volumeMounts:
      - name: foo
        mountPath: "/etc/foo"
        readOnly: true
