kubernetes/apps/pegasus/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: oauth2-proxy
