kubernetes/apps/pegasus/oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rpm: 120
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: sameorigin";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "Referrer-Policy: same-origin";
      more_set_headers "Permissions-Policy: accelerometer=(), battery=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - thetillhoff.de
    secretName: ingress-tls
  rules:
  - host: thetillhoff.de
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
